@@ -80,7 +80,7 @@ public class AnnotationGrpcServiceDiscoverer implements ApplicationContextAware,
                 serverInterceptor = this.applicationContext.getBean(interceptorClass);
             } else {
                 try {
-                    serverInterceptor = interceptorClass.newInstance();
+                    serverInterceptor = interceptorClass.getConstructor().newInstance();
                 } catch (final Exception e) {
                     throw new BeanCreationException("Failed to create interceptor instance", e);
                 }
